lintian checking and change default pic name

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 ukui-wallpapers (20.04.2-1) unstable; urgency=low
 
-  * Initial release.
+  * Initial release (Closes: #962664).
 
- -- handsome_feng <jianfengli@ubuntukylin.com>  Sat, 11 Apr 2020 20:35:20 +0800
+ -- Kevin Duan <duankaiwen@ubuntukylin.com>  Tue, 09 Jun 2020 09:13:32 +0800
